Allow to change color of types

--- a/pages/css/dependency.css
+++ b/pages/css/dependency.css
@@ -114,6 +114,7 @@
     border: 1px solid black;
     margin-right: 5px;
     margin-bottom: -5px;
+    cursor: pointer;
 }
 
 #confSelectArea > select {
