--- a/pages/css/dependency.css
+++ b/pages/css/dependency.css
@@ -96,6 +96,9 @@
     text-align: center;
     padding: 10px;
 }
+.tabContent > header * {
+    margin: 0;
+}
 .tabContent > details {
     margin-left: 10px;
 }
