--- a/pages/css/dependency.css
+++ b/pages/css/dependency.css
@@ -215,3 +215,41 @@ g.active .fileItem {
     stroke: rgba(255, 150, 50, 0.9);
     stroke-width: 3.5;
 }
+
+.notification {
+    position: fixed;
+    width: 500px;
+    bottom: 2px;
+    left: 50%;
+    box-shadow: 2px 2px 10px 2px;
+    transform: translate(-50%, 110%);
+    padding: 0.3em;
+    transition: transform 1s;
+    z-index: 10000;
+}
+.notification.active {
+    transform: translate(-50%, 0);
+}
+.notification.danger {
+    background-color: rgba(250, 75, 75, 0.9);
+}
+.notification.warn {
+    background-color: rgba(240, 150, 0, 0.9);
+}
+.notification.success {
+    background-color: rgba(90, 175, 90, 0.9);
+}
+
+.notification > header {
+    text-align: center;
+    font-size: 2em;
+}
+.notification > p {
+    text-align: justify;
+}
+.notification > button {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    border-radius: 1em;
+}
