--- a/pages/css/dependency2.css
+++ b/pages/css/dependency2.css
@@ -184,14 +184,14 @@
     height: 25px;
 }
 
-.linkToItem {
-    cursor: pointer;
-}
-.linkToItem > .flex {
+.flex {
     display: inline-flex;
     flex-direction: row;
     justify-content: space-between;
     width: 310px;
+}
+.linkToItem {
+    cursor: pointer;
 }
 .linkToItem:hover {
     text-decoration: underline;
@@ -199,11 +199,14 @@
 .linkToItem.active {
     color: yellow;
 }
-.visible-icons {
-    margin-right: 1em;
+.change-visibility {
+    margin-right: 0.5em;
 }
-.visible-icons:hover {
+.change-visibility:hover {
     color: darkorange;
+}
+.change-visibility.in-summary {
+    margin-right: -1em;
 }
 
 .selection-rectangle {
@@ -273,7 +276,7 @@ g.active .fileItem {
     bottom: 2px;
     left: 50%;
     box-shadow: 2px 2px 10px 2px;
-    transform: translate(-50%, 110%);
+    transform: translate(-50%, calc(100% + 10px));
     padding: 0.3em;
     transition: transform 1s;
     z-index: 10000;
