--- a/pages/css/dependency2.css
+++ b/pages/css/dependency2.css
@@ -18,6 +18,9 @@
     box-shadow: inset 80px 0 100px -80px #41b4b4;
     color: #ddf7f7;
     overflow: auto;
+    display: grid;
+    grid-template: "header" 90px "body" 1fr "footer" 40px "margin" 5px;
+    overflow-y: hidden;
 }
 
 .confSelectArea {
@@ -159,6 +162,8 @@
     font-size: 1.5em;
     text-align: center;
     padding: 10px;
+    width: 380px;
+    word-wrap: break-word;
 }
 .tabContent > header * {
     margin: 0;
@@ -266,8 +271,11 @@ g.active .fileItem {
 .dialog-pop-up {
     position: fixed;
     top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 1;
     box-shadow: 0px 5px 15px #000000;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 .dialog-pop-up header {
     font-size: 1.2em;
@@ -325,7 +333,7 @@ button.active {
     padding: 0;
 }
 .filter-item {
-    width: 300px;
+    width: 500px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -342,7 +350,7 @@ button.active {
     background-color: #eaeaea;
 }
 .add-item:hover {
-    background-color: #fafaea;
+    background-color: #fafada;
 }
 .filter-item .fa:hover {
     color: darkorange;
@@ -354,14 +362,18 @@ button.active {
     position: absolute;
     top: 0;
     left: 0;
-    width: 250px;
+    width: 450px;
 }
 .filter-item-mainInput {
     background-color: transparent;
 }
 .filter-item-displayed {
-    max-width: 250px;
+    max-width: 450px;
     overflow-wrap: break-word;
+}
+
+header.notVisible {
+    font-style: italic;
 }
 
 .file-actions {
@@ -371,4 +383,6 @@ button.active {
 }
 .file-actions > button {
     cursor: pointer;
+    font-size: 1.3em;
+    width: 40px;
 }
