--- a/pages/css/dependency2.css
+++ b/pages/css/dependency2.css
@@ -1,3 +1,7 @@
+button {
+    cursor: pointer;
+}
+
 .filterArea {
     position: absolute;
     top: 0;
@@ -32,6 +36,8 @@
     background-color: #184242;
     box-shadow: inset 80px 0 100px -80px #41b4b4;
     color: #ddf7f7;
+    display: grid;
+    grid-template: 25px / 1fr 25px;
     overflow: hidden;
 }
 
@@ -97,7 +103,6 @@
     padding: 5px;
     width: 30px;
     height: 30px;
-    cursor: pointer;
 }
 
 .close-code {
@@ -106,7 +111,6 @@
     top: 1em;
     right: 1em;
     border-radius: 2em;
-    cursor: pointer;
 }
 
 .save-code {
@@ -116,7 +120,6 @@
     right: 1em;
     border-radius: 5px;
     padding: 5px;
-    cursor: pointer;
 }
 
 .codeStatus {
@@ -168,10 +171,13 @@
 .tabContent > header * {
     margin: 0;
 }
-.tabContent > details {
+.tabContent > section {
+    overflow-y: auto;
+}
+.tabContent > section details {
     margin-left: 10px;
 }
-.tabContent > details > summary {
+.tabContent > section summary {
     cursor: pointer;
 }
 
@@ -189,8 +195,8 @@
     cursor: pointer;
 }
 
-.confSelectArea > select {
-    width: 100%;
+.confSelectArea > * {
+    /*width: 100%;*/
     height: 25px;
 }
 
