add a tab to list files

--- a/pages/css/dependency2.css
+++ b/pages/css/dependency2.css
@@ -472,3 +472,11 @@ header.notVisible {
     padding: 0.5em;
     width: 700px;
 }
+
+.list__form-container {
+    padding: 10px;
+}
+.list-area {
+    width: 100%;
+    height: 500px;
+}
